--- a/index.html
+++ b/index.html
@@ -2,18 +2,29 @@
     <head>
         <title>SpaceInvad3rCl0ne</title>
         <style>
-            canvas {
+            #background-canvas {
                 position: absolute;
                 top: 0px;
                 left: 0px;
                 background: transparent;
+                z-index: -1;
+            }
+            #menu-canvas {
+                z-index: 0;
+            }
+            button {
+                margin-top: 700px;
             }
         </style>
     </head>
     <body onload="init()">
         <canvas id="background-canvas" height="360" width="600">
-            Your browser doesn't support HTML5 canvas elements, get off of netscape, man!
+            Your browser doesn't support HTML5 canvas elements, get off of netscape, bro!
         </canvas>
+        <canvas id="menu-canvas" height="360" width="600">
+            Your browser doesn't support HTML5 canvas elements, get off of netscape, bro!
+        </canvas>
+        <button onclick="startMusicXD()">BUSDRIVER</button>
         <script src="./js/app.js"></script>
     </body>
 </html>
