--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
                 top: 0px;
                 left: 0px;
                 background: transparent;
-                z-index: -1;
-            }
-            #menu-canvas {
-                z-index: 0;
             }
             button {
                 margin-top: 700px;
@@ -21,10 +17,7 @@
         <canvas id="background-canvas" height="360" width="600">
             Your browser doesn't support HTML5 canvas elements, get off of netscape, bro!
         </canvas>
-        <canvas id="menu-canvas" height="360" width="600">
-            Your browser doesn't support HTML5 canvas elements, get off of netscape, bro!
-        </canvas>
-        <button onclick="startMusicXD()">BUSDRIVER</button>
+        <!-- <button onclick="startMusicXD()">BUSDRIVER</button> -->
         <script src="./js/app.js"></script>
     </body>
 </html>
