Ship spawns and responds to user input, bullets fire from ship based on user pressing spacebar. Fix html styling for canvas, Canvas layered with css z-index values

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>SpaceInvad3rCl0ne</title>
         <style>
-            #background-canvas {
+            canvas {
                 position: absolute;
                 top: 0px;
                 left: 0px;
